Sat Oct 10 19:04:42 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/udpsocket.c (udp_connect, udp_bind): get open files
	  inside ensure functions.

Sat Oct 10 18:35:12 2015  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.c (vm_call_method0): do not propagate enable_fastpath,
	  but pass dummy CC to prevent wrong caching.

Sat Oct 10 15:28:45 2015  Koichi Sasada  <ko1@atdot.net>

	* import a github pull request
	  https://github.com/ruby/ruby/pull/1050
	  by Kazuho Oku <kazuho@natadeco.co>.

	  This pull request has the following commits.

	* gc.c: reduce # of args to 6 (max. of register args on x86-64) so
	  that the `newobj_of_slowpass` can be called via TCO.

	* gc.c (newobj_of), string.c (str_duplicate): for performance,
	  the hot functions must be inlined.

	* gc.c: for performance, preceding arguments of `.*newobj_of.*`
	  must be same, so that the arg registers can be reused in case of
	  TCO.

Sat Oct 10 08:52:21 2015  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* ext/socket/udpsocket.c (udp_connect, udp_bind, udp_send): fix
	  memory leaks at closed socket.

Fri Oct  9 17:29:07 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb (parse257): refactor.

Fri Oct  9 16:42:26 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/imap.rb: use frozen_string_literal: true.

	* test/net/imap/test_imap.rb: ditto.

	* test/net/imap/test_imap_response_parser.rb: ditto.

Fri Oct  9 15:52:28 2015  Shugo Maeda  <shugo@ruby-lang.org>

	* lib/net/ftp.rb: use frozen_string_literal: true.

	* test/net/ftp/test_buffered_socket.rb: ditto.

	* test/net/ftp/test_ftp.rb: ditto.

	* test/net/ftp/test_mlsx_entry.rb: ditto.

Fri Oct  9 14:12:35 2015  Shota Fukumori (sora_h)  <her@sorah.jp>

	* ext/openssl/lib/openssl/ssl.rb: Revert r52082 because it was
	  dropping TLS v1.1 support too. Supporting only TLS v1.2 is too
	  early, because many popular websites still don't support it.

	  For instance, Servers where aws-sdk connects to still don't support